gccida/g2/convert_to_integer
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:583:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v3; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:589:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:590:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:591:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v12; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:592:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:593:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:598:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:600:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:603:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:607:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:610:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:611:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:612:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:613:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:618:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:619:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v40; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:766:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( type->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:798:14: error: expected identifier or '('
 struct expr = type_for_size( ( ( unsigned int)target_flags & 0x2000000) == 0 ? 32 : 64, 0); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/convert.c:812:20: error: expected expression
v14 = ( tree_node *)*( &global_trees + 11); 
                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_to_integer/src/obj/convert.o] Error 1
